apps/routers/talos-related-routes/inactive/yaateeh-dev/yaateeh-dev-ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: yaateeh-dev
  namespace: traefik-staging
spec:
  entryPoints:
    - websecure
  routes:
  - match: HostSNI(`giovanni.yaateeh.dev`) || HostSNI(`nwinter.yaateeh.dev`) || HostSNI(`alys.yaateeh.dev`) || HostSNI(`dan.yaateeh.dev`) || HostSNI(`xenocid.yaateeh.dev`) || HostSNI(`jordan.yaateeh.dev`) || HostSNI(`alys.yaateeh.dev`) || HostSNI(`dan.yaateeh.dev`) || HostSNI(`xenocid.yaateeh.dev`) || HostSNI(`jordan.yaateeh.dev`) || HostSNI(`brian.yaateeh.dev`) || HostSNI(`nick.yaateeh.dev`) || HostSNI(`alex.yaateeh.dev`) || HostSNI(`clarissa.yaateeh.dev`) || HostSNI(`luke.yaateeh.dev`) || Host [...]
    services:
    - name: yaateeh-dev
      namespace: traefik-staging
      port: 443
  tls:
    passthrough: true
